# mingutils

./: CMakeLists.txt  README.md  caps.md  config  ndk.mk
cmake/: common.mk
demo/caps/: caps_demo.cc  random_caps_factory.cc  random_caps_factory.h
demo/log/: rlog_demo.cc  tcp-rlogcat.cc
demo/misc/: clargs_demo.c  clargs_demo.cc  socktimeout.cc  uri_demo.cc  xmopt-demo.cc
include/caps/: caps.h
include/log/: rlog.h
include/misc/: circle-stream.h  clargs.h  merge-sort.h  thr-pool.h  uri.h  variable_queue.h  xmopt.h
src/caps/: caps.cc  defs.h  reader.cc  reader.h  writer.cc  writer.h
src/log/: common.h  rlog.c  rlog.cc  sock-svc-writer.h  tcp-sock-writer.c
src/misc/: clargs.cc  http.cc  uri.cc  variable_queue.cc
tests/misc/: test-circle-stream.cpp
